# prompt-injection-testbed

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  testbed.py
scripts/: generate_multimodal.py
skills/injection-payloads/: SKILL.md
skills/injection-payloads/references/: payloads.yaml
skills/multimodal-payloads/: SKILL.md
skills/multimodal-payloads/references/: manifest.yaml
skills/multimodal-payloads/scripts/: generate_multimodal.py
test-apps/chat-completions/: README.md  chat.py  pyproject.toml
test-apps/web-chatbot/: README.md  app.py  pyproject.toml
