[project]
name = "prompt-injection-testbed"
version = "0.1.0"
description = "Minimal framework for testing LLM resilience against prompt injection attacks"
requires-python = ">=3.10"
dependencies = [
    "openai-agents[litellm]",
    "python-dotenv",
    "pyyaml",
    "httpx",
]

[project.scripts]
testbed = "testbed:main"
